--- a/styles.css
+++ b/styles.css
@@ -37,3 +37,31 @@ background-color: white;
     color: black;
 background-color: white;
 }
+
+nav {
+    padding: 20px 0;
+    
+}
+nav ul {
+    padding: 0;
+    margin: 0;
+    
+}
+nav li{
+ display: inline;
+ list-style: none;
+ line-height: 42px;
+ margin-left: 15px;
+ 
+}
+
+nav a{
+    text-decoration: none;
+    color: black;
+    font-weight: bolder;
+}
+
+nav a:hover, li.active a  {
+   
+    color: rgb(109, 99, 255);
+}
